--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,7 @@ body {
 .custom-swiper-scrollbar {
   @apply absolute left-1/2 -translate-x-1/2 bottom-4 h-1 w-[30rem] z-50;
 }
+
+.hoverItem {
+  @apply h-5 w-2 bg-appGreen;
+}
